--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
----
-layout: default
-title: Главная страница
-show_navigation: false
----
-<div style="text-align: center; padding: 50px 0;">
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Вокальный тренажер</title>
+</head>
+<body>
     <h1>Вокальный тренажер</h1>
     <p>Церковные песнопения в формате ABC</p>
-    <p><a href="{{ '/partitury/' | relative_url }}" style="font-size: 1.2em;">📁 Перейти к партитурам</a></p>
-</div>
+    <ul>
+        <li><a href="partitures/">Все партитуры</a></li>
+        <li><a href="partitures/d5.html">День прешед. Соловецкое</a></li>
+    </ul>
+</body>
+</html>
